Parts Tags in Game Saves

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /Source/bin/Debug
+Source/obj/Debug/Assembly-CSharp.dll
+Source/obj/Debug/Assembly-CSharp.dll
+Source/obj/Debug/Assembly-CSharp.pdb
