--- a/Source/Assembly-CSharp.csproj
+++ b/Source/Assembly-CSharp.csproj
@@ -57,9 +57,22 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\MasterInfo.cs" />
+    <Compile Include="Assets\Scripts\Addons\JDIS\JDISWeb\Responses\JDISRocketResponse.cs" />
+    <Compile Include="Assets\Scripts\Addons\JMtech\LoggerInstance.cs" />
+    <Compile Include="Assets\Scripts\Addons\JMtech\ShareController\PageContainer.cs" />
+    <Compile Include="Assets\Scripts\Addons\ShareScript\Client.cs" />
+    <Compile Include="Assets\Scripts\Addons\ShareScript\Events\ClientAuthedEvent.cs" />
+    <Compile Include="Assets\Scripts\Addons\ShareScript\Events\ClientInitiatedEvent.cs" />
+    <Compile Include="Assets\Scripts\Addons\ShareScript\Events\InitialTimeoutEvent.cs" />
+    <Compile Include="Assets\Scripts\Addons\Translations\TranslationRefrence.cs" />
     <Compile Include="Assets\SFSML\Utility\General.cs" />
+    <Compile Include="Assets\SharingInfo.cs" />
+    <Compile Include="Assets\VersionHolder.cs" />
+    <Compile Include="Assets\VersionInfo.cs" />
     <Compile Include="Blur.cs" />
     <Compile Include="BoolValueHolder.cs" />
+    <Compile Include="ButtonController.cs" />
     <Compile Include="CelestialBodyData.cs" />
     <Compile Include="ClosestApproach.cs" />
     <Compile Include="ColorModule.cs" />
@@ -70,17 +83,88 @@
     <Compile Include="DockingPortModule.cs" />
     <Compile Include="Double3.cs" />
     <Compile Include="Ellipse.cs" />
+    <Compile Include="Engineer.cs" />
     <Compile Include="EngineModule.cs" />
+    <Compile Include="EXT.cs" />
     <Compile Include="FairingModule.cs" />
+    <Compile Include="FlameRandomizer.cs" />
     <Compile Include="FloatValueHolder.cs" />
+    <Compile Include="FlowModule.cs" />
     <Compile Include="GameEvent.cs" />
     <Compile Include="GameEventListener.cs" />
     <Compile Include="GameSaving.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\CommonTypesUtil.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\DataSource.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Events\EventVisibility.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Events\IEvent.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Gravity.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\LeaderboardCollection.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\LeaderboardStart.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\LeaderboardTimeSpan.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Nearby\AdvertisingResult.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Nearby\ConnectionRequest.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Nearby\ConnectionResponse.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Nearby\EndpointDetails.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Nearby\IDiscoveryListener.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Nearby\IMessageListener.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Nearby\InitializationStatus.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Nearby\NearbyConnectionConfiguration.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\ResponseStatus.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\SavedGame\ConflictCallback.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\SavedGame\ConflictResolutionStrategy.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\SavedGame\IConflictResolver.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\SavedGame\ISavedGameClient.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\SavedGame\ISavedGameMetadata.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\SavedGame\SavedGameMetadataUpdate.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\SavedGame\SavedGameRequestStatus.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\SavedGame\SelectUIStatus.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\UIStatus.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\VideoCaptureMode.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\VideoCaptureOverlayState.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\VideoQualityLevel.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Video\CaptureOverlayStateListener.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Video\IVideoClient.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Video\VideoCapabilities.cs" />
+    <Compile Include="GooglePlayGames\BasicApi\Video\VideoCaptureState.cs" />
+    <Compile Include="GooglePlayGames\OurUtils\Logger.cs" />
+    <Compile Include="GooglePlayGames\OurUtils\Misc.cs" />
+    <Compile Include="GooglePlayGames\OurUtils\PlayGamesHelperObject.cs" />
+    <Compile Include="GooglePlayGames\PluginVersion.cs" />
+    <Compile Include="GooglePlay\MyAchievements.cs" />
     <Compile Include="GPGSIds.cs" />
     <Compile Include="HeightMap.cs" />
     <Compile Include="IAP.cs" />
     <Compile Include="IconLoad.cs" />
     <Compile Include="InputController.cs" />
+    <Compile Include="JMtech\JDIS\Auth\JDISKey.cs" />
+    <Compile Include="JMtech\JDIS\JDISClient.cs" />
+    <Compile Include="JMtech\JDIS\Web\JDISResponse.cs" />
+    <Compile Include="JMtech\JDIS\Web\JDISResponseType.cs" />
+    <Compile Include="JMtech\JDIS\Web\JDISWebService.cs" />
+    <Compile Include="JMtech\JDIS\Web\Request\BaseRequest.cs" />
+    <Compile Include="JMtech\JDIS\Web\Request\JDISAuthRequest.cs" />
+    <Compile Include="JMtech\JDIS\Web\Request\JDISChangeName.cs" />
+    <Compile Include="JMtech\JDIS\Web\Request\JDISRequest.cs" />
+    <Compile Include="JMtech\JDIS\Web\Request\JDISRequestExtension.cs" />
+    <Compile Include="JMtech\JDIS\Web\Request\JDISRequestPage.cs" />
+    <Compile Include="JMtech\JDIS\Web\Request\JDISRetreiveRocket.cs" />
+    <Compile Include="JMtech\JDIS\Web\Request\JDISSelectiveRequest.cs" />
+    <Compile Include="JMtech\JDIS\Web\Request\JDISUploadRocket.cs" />
+    <Compile Include="JMtech\JDIS\Web\Request\JDISVote.cs" />
+    <Compile Include="JMtech\JDIS\Web\Request\TrendCategory.cs" />
+    <Compile Include="JMtech\JDIS\Web\Request\TrendEnum.cs" />
+    <Compile Include="JMtech\JDIS\Web\Request\VoteType.cs" />
+    <Compile Include="JMtech\JDIS\Web\Response\JDISAuthResponse.cs" />
+    <Compile Include="JMtech\JDIS\Web\Response\JDISComment.cs" />
+    <Compile Include="JMtech\JDIS\Web\Response\JDISPage.cs" />
+    <Compile Include="JMtech\JDIS\Web\Response\JDISRocket.cs" />
+    <Compile Include="JMtech\JDIS\Web\Response\JDISSelective.cs" />
+    <Compile Include="JMtech\Main\Checker.cs" />
+    <Compile Include="JMtech\Main\GameTracker.cs" />
+    <Compile Include="JMtech\Translations\SFST.cs" />
+    <Compile Include="JMtech\Translations\Translation.cs" />
+    <Compile Include="JMtech\Translations\TranslationSerializer.cs" />
+    <Compile Include="JMtech\UIController\ColorController.cs" />
     <Compile Include="Kepler.cs" />
     <Compile Include="LandingLegModule.cs" />
     <Compile Include="LinkModule.cs" />
@@ -88,6 +172,7 @@
     <Compile Include="Map.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="MoveModule.cs" />
+    <Compile Include="MsgController.cs" />
     <Compile Include="NewBuildSystem\Build.cs" />
     <Compile Include="NewBuildSystem\Orientation.cs" />
     <Compile Include="NewBuildSystem\PartData.cs" />
@@ -109,9 +194,58 @@
     <Compile Include="ReorderableEventList.cs" />
     <Compile Include="ReorderableList.cs" />
     <Compile Include="Resource.cs" />
+    <Compile Include="ResourceGroup.cs" />
     <Compile Include="ResourceModule.cs" />
+    <Compile Include="RocketPost.cs" />
     <Compile Include="Saving.cs" />
+    <Compile Include="ScrollController.cs" />
     <Compile Include="SeparatorModule.cs" />
+    <Compile Include="ServerControlFramework\Info.cs" />
+    <Compile Include="ServerControlFramework\LoggerContext.cs" />
+    <Compile Include="ServerControlFramework\LogicControllers\EventSystem\SingleOccasionListener.cs" />
+    <Compile Include="ServerControlFramework\ServerControlLiberary\DataControllers\DefaultEvents\ConnectionReadyEvent.cs" />
+    <Compile Include="ServerControlFramework\ServerControlLiberary\DataControllers\PacketSystem\Packets\ClientReadyPacket.cs" />
+    <Compile Include="ServerControlFramework\ServerControlLiberary\DataControllers\PacketSystem\Packets\MessagePacket.cs" />
+    <Compile Include="ServerControlFramework\SyncContext.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Localized\MassData\DefaultIOContext.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\AuthedPacket.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\Objects\AuthID.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\Objects\CLRocket.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\Objects\Identification\IDGenerator.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\Packets\CheckAuthPacket.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\Packets\GenerateAuthPacket.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\Packets\ServerErrorPacket.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\RequestPackets\CategoryRequestPacket.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\RequestPackets\DeletePacket.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\RequestPackets\DownloadRequestPacket.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\RequestPackets\SharingCategory.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\RequestPackets\UploadRocketRequest.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\RequestPackets\VotePacket.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\ResponsePacket\CategoryResponsePacket.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\ResponsePacket\CredGenResponse.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\ResponsePacket\RocketResponsePacket.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\ResponsePacket\RocketUploadResponse.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\ResponsePacket\VoteResponse.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\SFSBasePacket.cs" />
+    <Compile Include="ServerControlSoftware\Externals\Shared\SharingConfiguration.cs" />
+    <Compile Include="ServerTransferProgram\LogicControllers\DelayedStart.cs" />
+    <Compile Include="ServerTransferProgram\LogicControllers\DelayedUpdateMS.cs" />
+    <Compile Include="ServerTransferProgram\LogicControllers\DelayedUpdateTPS.cs" />
+    <Compile Include="ServerTransferProgram\LogicControllers\Delayer.cs" />
+    <Compile Include="ServerTransferProgram\LogicControllers\EventListener.cs" />
+    <Compile Include="ServerTransferProgram\LogicControllers\EventListenerCollectable.cs" />
+    <Compile Include="ServerTransferProgram\LogicControllers\EventManager.cs" />
+    <Compile Include="ServerTransferProgram\LogicControllers\EventTypes\CancellableEvent.cs" />
+    <Compile Include="ServerTransferProgram\LogicControllers\EventTypes\Event.cs" />
+    <Compile Include="ServerTransferProgram\LogicControllers\UpdateableObject.cs" />
+    <Compile Include="ServerTransferProgram\ServerControlLiberary\DataControllers\DefaultEvents\PacketReceivedEvent.cs" />
+    <Compile Include="ServerTransferProgram\ServerControlLiberary\DataControllers\DefaultEvents\PingReceivedEvent.cs" />
+    <Compile Include="ServerTransferProgram\ServerControlLiberary\DataControllers\PacketSystem\DefaultPacket.cs" />
+    <Compile Include="ServerTransferProgram\ServerControlLiberary\DataControllers\PacketSystem\Packets\AuthenticationHeaderPacket.cs" />
+    <Compile Include="ServerTransferProgram\ServerControlLiberary\DataControllers\PacketSystem\Packets\PingPacket.cs" />
+    <Compile Include="ServerTransferProgram\ServerControlLiberary\PacketController.cs" />
+    <Compile Include="ServerTransferProgram\ServerControlLiberary\SCReceiver.cs" />
+    <Compile Include="ServerTransferProgram\Util.cs" />
     <Compile Include="SFSML\Attributes\MyConfigIdentifier.cs" />
     <Compile Include="SFSML\Attributes\MyHookListenerContainer.cs" />
     <Compile Include="SFSML\Attributes\MyListenerAttribute.cs" />
@@ -158,6 +292,7 @@
     <Compile Include="SFSML\Translation\MyTranslationController.cs" />
     <Compile Include="SFSML\Utility\IMGUIUtil.cs" />
     <Compile Include="SFSML\Utility\UnityUtil.cs" />
+    <Compile Include="Sharing.cs" />
     <Compile Include="SimpleReorderableList.cs" />
     <Compile Include="SortingLayerExposer.cs" />
     <Compile Include="Soundtrack.cs" />
@@ -165,7 +300,9 @@
     <Compile Include="TipsData.cs" />
     <Compile Include="TorqueModule.cs" />
     <Compile Include="Touch.cs" />
+    <Compile Include="TouchKeyboard.cs" />
     <Compile Include="TransferWindow.cs" />
+    <Compile Include="UI.cs" />
     <Compile Include="UIEventDelegate\AttributeExtension.cs" />
     <Compile Include="UIEventDelegate\Entry.cs" />
     <Compile Include="UIEventDelegate\EventDelegate.cs" />
